Release 2.2.0-dev
=================

New Features
------------

:mod:`rpy2.robjects`:

- :meth:`Environment.keys` to list the keys

:mod:`rpy2.rinterface`:

- NA_Complex and :class:`NAComplexType` for missing complex values.


Changes
-------

:mod:`rpy2.robjects`:

- NA_bool, NA_real, NA_integer, NA_character and NA_complex are now
  deprecated (and removed).
  NA_Logical, NA_Real, NA_Integer, NA_Character, NA_Complex should be used.


Release 2.1.3
=============

Bugs fixed
----------

- Spurious error message when using DataFrame.from_csvfile() without
  specifying col_names  or row_names

- Patch to finally compile with Python < 2.6 (contribDuted by Denis Barbier)


Release 2.1.2
=============

New Features
------------

:mod:`rpy2.robjects`:

- NA_Logical, NA_Real, NA_Integer, NA_Character from :mod:`rpy2.rinterface` 
  are imported by robjects.

Changes
-------

:mod:`rpy2.robjects`:

- NA_bool, NA_real, NA_integer, NA_character and NA_complex are now
  robjects-level vectors
  (they were rinterface-level vectors).
  Consider using the rinterface-defined NAs instead of them.

Bugs fixed
----------

- Missing conditional C definition to compile with Python 2.4 # issue 38

- Fixed error when calling robjects.vectors.Vector.iteritems() on an R 
  vector without names

- Fixed automatic conversion issues (issue #41)


Release 2.1.1
=============

Bugs fixed
----------

- Issues with NA values # issue 37

- Missing manual scale functions in :mod:`rpy2.robjects.lib.ggplot2` # issue 39


Release 2.1.0
=============

New Features
------------

:mod:`rpy2.robjects`:

- Method :meth:`formals` for :class:`Function` (formerly *RFunction*)

- Methods :meth:`slotnames`, :meth:`isclass`, and :meth:`validobject`
  for :class:`RS4`

- Vector-like objects now in a module :mod:`rpy2.robjects.vectors`

- :func:`set_accessors` for adding simply accessors to a class inheriting
  from :class:`RS4`

- :class:`RS4_Type` for metaclass-declared accessors
